{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 18,
  "lineage": "5475736c-2319-28f3-a5b9-65bc67bd435c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cdbc704d16a33a11",
            "domain": "vpc",
            "id": "eipalloc-0cdbc704d16a33a11",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-23-23-23-5.compute-1.amazonaws.com",
            "public_ip": "23.23.23.5",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f72c84e40e9ae30d",
            "domain": "vpc",
            "id": "eipalloc-0f72c84e40e9ae30d",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-23-20-225-143.compute-1.amazonaws.com",
            "public_ip": "23.20.225.143",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:082727703945:internet-gateway/igw-091e7dd952ebad0d6",
            "id": "igw-091e7dd952ebad0d6",
            "owner_id": "082727703945",
            "tags": {
              "Name": "my_IGW"
            },
            "tags_all": {
              "Name": "my_IGW"
            },
            "vpc_id": "vpc-0dc865e33fed8afbe"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_NATGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cdbc704d16a33a11",
            "connectivity_type": "public",
            "id": "nat-0f3fde82222f9b007",
            "network_interface_id": "eni-021bced155d43177d",
            "private_ip": "10.0.1.59",
            "public_ip": "23.23.23.5",
            "subnet_id": "subnet-0d331bdb732c8122f",
            "tags": {
              "Name": "my_NAT"
            },
            "tags_all": {
              "Name": "my_NAT"
            }
          },
          "dependencies": [
            "aws_eip.my_eip",
            "aws_internet_gateway.IGW",
            "aws_subnet.pub-snet",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f72c84e40e9ae30d",
            "connectivity_type": "public",
            "id": "nat-0790e88c6d1fd999d",
            "network_interface_id": "eni-04ed7fddd37e7697d",
            "private_ip": "10.0.2.137",
            "public_ip": "23.20.225.143",
            "subnet_id": "subnet-0a190f1411d89232d",
            "tags": {
              "Name": "my_NAT"
            },
            "tags_all": {
              "Name": "my_NAT"
            }
          },
          "dependencies": [
            "aws_eip.my_eip",
            "aws_internet_gateway.IGW",
            "aws_subnet.pub-snet",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_main_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:082727703945:route-table/rtb-0cec98baec4b5e3cc",
            "id": "rtb-0cec98baec4b5e3cc",
            "owner_id": "082727703945",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-091e7dd952ebad0d6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my_main_rt"
            },
            "tags_all": {
              "Name": "my_main_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc865e33fed8afbe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_priv_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:082727703945:route-table/rtb-0724102f93b8eb482",
            "id": "rtb-0724102f93b8eb482",
            "owner_id": "082727703945",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f3fde82222f9b007",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my_priv_rt"
            },
            "tags_all": {
              "Name": "my_priv_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc865e33fed8afbe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.my_eip",
            "aws_internet_gateway.IGW",
            "aws_nat_gateway.my_NATGW",
            "aws_subnet.pub-snet",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:082727703945:route-table/rtb-0e83abcc2558dd484",
            "id": "rtb-0e83abcc2558dd484",
            "owner_id": "082727703945",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0790e88c6d1fd999d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my_priv_rt"
            },
            "tags_all": {
              "Name": "my_priv_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc865e33fed8afbe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.my_eip",
            "aws_internet_gateway.IGW",
            "aws_nat_gateway.my_NATGW",
            "aws_subnet.pub-snet",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_priv_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c822daa257f03e45",
            "route_table_id": "rtb-0724102f93b8eb482",
            "subnet_id": "subnet-0b41f5a0a85cb23b9"
          },
          "dependencies": [
            "aws_eip.my_eip",
            "aws_internet_gateway.IGW",
            "aws_nat_gateway.my_NATGW",
            "aws_route_table.my_priv_rt",
            "aws_subnet.priv-snet",
            "aws_subnet.pub-snet",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04df6bf52f3858dd3",
            "route_table_id": "rtb-0e83abcc2558dd484",
            "subnet_id": "subnet-0a2b645e382b49c68"
          },
          "dependencies": [
            "aws_eip.my_eip",
            "aws_internet_gateway.IGW",
            "aws_nat_gateway.my_NATGW",
            "aws_route_table.my_priv_rt",
            "aws_subnet.priv-snet",
            "aws_subnet.pub-snet",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_pub_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac35eae53e10ad8d",
            "route_table_id": "rtb-0cec98baec4b5e3cc",
            "subnet_id": "subnet-0d331bdb732c8122f"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.my_main_rt",
            "aws_subnet.pub-snet",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca52244e5a7f3f2d",
            "route_table_id": "rtb-0cec98baec4b5e3cc",
            "subnet_id": "subnet-0a190f1411d89232d"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.my_main_rt",
            "aws_subnet.pub-snet",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv-snet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:082727703945:subnet/subnet-0b41f5a0a85cb23b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b41f5a0a85cb23b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "082727703945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv-snet0"
            },
            "tags_all": {
              "Name": "priv-snet0"
            },
            "vpc_id": "vpc-0dc865e33fed8afbe"
          },
          "dependencies": [
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:082727703945:subnet/subnet-0a2b645e382b49c68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2b645e382b49c68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "082727703945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv-snet1"
            },
            "tags_all": {
              "Name": "priv-snet1"
            },
            "vpc_id": "vpc-0dc865e33fed8afbe"
          },
          "dependencies": [
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-snet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:082727703945:subnet/subnet-0d331bdb732c8122f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d331bdb732c8122f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "082727703945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-snet0"
            },
            "tags_all": {
              "Name": "pub-snet0"
            },
            "vpc_id": "vpc-0dc865e33fed8afbe"
          },
          "dependencies": [
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:082727703945:subnet/subnet-0a190f1411d89232d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a190f1411d89232d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "082727703945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-snet1"
            },
            "tags_all": {
              "Name": "pub-snet1"
            },
            "vpc_id": "vpc-0dc865e33fed8afbe"
          },
          "dependencies": [
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:082727703945:vpc/vpc-0dc865e33fed8afbe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08402878abec6b0ff",
            "default_route_table_id": "rtb-0ee316c6b2470348b",
            "default_security_group_id": "sg-0ae876c120cc20947",
            "dhcp_options_id": "dopt-0fe3b5868bd8f8bdb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0dc865e33fed8afbe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ee316c6b2470348b",
            "owner_id": "082727703945",
            "tags": {
              "Name": "my_vpc"
            },
            "tags_all": {
              "Name": "my_vpc"
            }
          }
        }
      ]
    }
  ]
}